cleanup lint errors and sentence-style capitalization warnings

--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -1,5 +1,5 @@
 ---
-title: Using Proxies
+title: Proxying the Clerk Frontend API
 description: Learn how to proxy the Clerk Frontend API through your domain.
 ---
 
@@ -11,7 +11,7 @@ The recommended way to connect to the Clerk Frontend API is to [set up CNAME rec
 
 When using a proxy, all requests to the Frontend API will be made through your domain. This allows you to use your own SSL certificate, and gives you more control over how you configure your application.
 
-## How to use Proxying
+## How to use proxying
 
 <Steps>
 ### Create your application and install Clerk
@@ -32,13 +32,13 @@ You can choose any path you'd like, but it must be unique and not conflict with 
 
 Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-api.clerk.dev/*` with the body and all headers intact.
 
-##### Three additional headers must be set:
+Three additional headers must be set
 
-  - `Clerk-Proxy-Url`: Needs to have the full proxy URL.
-  - `Clerk-Secret-Key`: The secret key for your Clerk instance.
-  - `X-Forwarded-For`: The IP address of the original client making the request.
+- `Clerk-Proxy-Url`: Needs to have the full proxy URL.
+- `Clerk-Secret-Key`: The secret key for your Clerk instance.
+- `X-Forwarded-For`: The IP address of the original client making the request.
 
-#### Example Configuration
+#### Example configuration
 
 <Tabs items={["Nginx", "Cloudflare Workers"]}>
   <Tab>
@@ -109,7 +109,7 @@ Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-a
   Every proxy configuration will be different and we're here to help. Please [reach out](https://clerk.com/support) if there's a specific use-case you're looking to solve.
 </Callout>
 
-### Enable Proxying
+### Enable proxying
 
 In order to enable proxying, you need to set a proxy URL for your Clerk instance's domain. This can be done through the Clerk Dashboard or through the Backend API.
 
