--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -84,7 +84,7 @@ src="/docs/images/authentication/email-address.jpg"
 alt="The 'Email, Phone, Username' tab with an arrow pointing to the toggle next to 'Email address', toggled on."
 />
 
-### Configure **Email address** settings
+### Configure email address settings
 
 Select the gear symbol next to **Email address** to open up the configuration settings. 
 
@@ -129,7 +129,7 @@ To make changes to the redirect behavior of both sign-in and sign-up flows, in t
 
 </Steps>
 
-### Phone + SMS Code
+### Phone + SMS code
 
 <Callout>
   Phone number identifiers and SMS verification are Premium features that are only available on some plans. For more information, go to the Clerk Dashboard and navigate to the **[Plan & Billing](https://dashboard.clerk.com/last-active?path=plan-billing)** page.
@@ -152,7 +152,7 @@ alt="The 'Email, Phone, Username' tab with an arrow pointing to the toggle next 
 
 Note how the toggle for **Email address** is off, because in this example, your application is prioritizing a mobile-first approach.
 
-### Configure **Phone number** settings
+### Configure phone number settings
 
 Select the gear symbol next to **Phone number** to open up the configuration settings. 
 
