--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -130,7 +130,7 @@ Everything should be set up now for you to try out authentication via SAML. Go t
 | Service Provider | This is the service that requests and receives the identity from the IdP. | | | |	
 | SP | Abbreviation for “Service Provider”. | | | |	
 
-## FAQ
+## Frequently asked questions (FAQ)
 
 **I’ve enabled other strategies but they don’t work.**
 
