--- a/docs/authentication/social-connections/oauth.mdx
+++ b/docs/authentication/social-connections/oauth.mdx
@@ -1,9 +1,9 @@
 ---
-title: Social Connections (OAuth)
+title: Social connections (OAuth)
 description: Learn how to effortlessly add social connections to your application using popular OAuth providers like Google, Facebook, Github and more.
 ---
 
-# Social Connections (OAuth)
+# Social connections (OAuth)
 
 Clerk makes it easy to add social connection capabilities to your application. Social connections are designed to simplify the sign-up and sign-in process for the end-user, resulting in higher conversion rates, a streamlined user data collection flow, and an overall better user experience.
 
@@ -69,7 +69,7 @@ Using these tokens, you can query the respective OAuth providers for additional 
   Clerk ensures that the OAuth Access Token will be always fresh so that you don't have to worry about OAuth Refresh Tokens anymore.
 </Callout>
 
-## Add Social Connection after sign-up
+## Add social connection after sign-up
 
 For each OAuth provider, you can choose whether it will be available during sign-up and sign-in, or if the connection should be made later.
 
