--- a/docs/backend-requests/handling/manual-jwt.mdx
+++ b/docs/backend-requests/handling/manual-jwt.mdx
@@ -1,9 +1,9 @@
 ---
-title: Manual JWT Verfication
+title: Manual JWT verfication
 description: Learn how to manually verify Clerk-generated session tokens (JWTs).
 ---
 
-# Manual JWT Verification
+# Manual JWT verification
 
 Your Clerk-generated [session tokens](/docs/backend-requests/resources/session-tokens) are essentially JWTs which are signed using your instance's private key and can be verified using your instance's public key. Depending on your architecture, these tokens will be in your backend requests either via a cookie named `__session` or via the Authorization header.
 
@@ -15,7 +15,7 @@ For every request, you must validate its token to make sure it hasn't expired an
 
 Retrieve the session token from either `__session` cookie for a same origin request or from the Authorization header for cross origin requests.
 
-### Get your instance's Public Key
+### Get your instance's public key
 
 There are three ways to obtain your public key:
 
