--- a/docs/backend-requests/handling/nodejs.mdx
+++ b/docs/backend-requests/handling/nodejs.mdx
@@ -158,7 +158,7 @@ app.listen(port, () => {
   ```
 </CodeBlockTabs>
 
-### Express Error Handlers
+### Express error handlers
 
 Express comes with a default error handler for errors encountered in the middleware chain.
 
