--- a/docs/backend-requests/making/custom-session-token.mdx
+++ b/docs/backend-requests/making/custom-session-token.mdx
@@ -13,7 +13,7 @@ They typically contain a standard set of claims that are required for Clerk to f
   Clerk has default claims that will be included in this session token. You can read about [Clerk's session tokens](/docs/backend-requests/resources/session-tokens) and it's default claims.
 </Callout>
 
-## How to Customize your session token?
+## How to customize your session token?
 
 <Steps>
 
