--- a/docs/backend-requests/making/jwt-templates.mdx
+++ b/docs/backend-requests/making/jwt-templates.mdx
@@ -1,9 +1,9 @@
 ---
-title: JWT Templates
+title: JWT templates
 description: Customize your authentication tokens and integrate with anyone.
 ---
 
-# JWT Templates
+# JWT templates
 
 Clerk offers the ability to generate [JSON Web Tokens](https://en.wikipedia.org/wiki/JSON_Web_Token) (JWTs) representing users that are signed in to your application. Clerk provides the ability to extend this functionality by allowing you to *customize* the contents of these tokens through JWT Templates. This enables you to integrate with any third-party services that support authentication with JWTs.
 
