--- a/docs/backend-requests/making/same-origin.mdx
+++ b/docs/backend-requests/making/same-origin.mdx
@@ -77,7 +77,7 @@ const { data, error } = useQuery('foo', async () => {
 });
 ```
 
-## Background Fetching
+## Background fetching
 
 For applications that are fetching content in the background, like when a tab is no longer focused, you will need to include an Authorization header along with your request.
 
