--- a/docs/backend-requests/resources/rate-limits.mdx
+++ b/docs/backend-requests/resources/rate-limits.mdx
@@ -13,7 +13,7 @@ If you receive a 429 error code, that means your IP address has been rate limite
 
 Requests that have been rate limited, will receive the `Retry-After` response header, which contains the number of seconds after which the block expires.
 
-## Frontend API Requests
+## Frontend API requests
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -22,7 +22,7 @@ Requests that have been rate limited, will receive the `Retry-After` response he
 | Attempt SignIn | `/v1/sign_ins/attempt_(first\|second)_factor` | 3 requests per 10 seconds |
 | Attempt SignUp | `/v1/sign_ups/attempt_verification` | 3 requests per 10 seconds |
 
-## Backend API Requests
+## Backend API requests
 
 | Name | Type | Description |
 | --- | --- | --- |
