--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -202,7 +202,7 @@ All props below are required.
 
 ## Advanced use cases
 
-### Reordering Default Routes
+### Reordering default routes
 
 If you want to reorder the default routes (`Account` and `Security`) in the `UserProfile` navigation sidebar, you can use the `<UserProfile.Page />` component with the `label` prop set to `'account'` or `'security'`. This will target the existing default page and allow you to rearrange it.
 
