--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -82,7 +82,7 @@ The `<OrganizationList />` component is used to display organization related mem
   </Tab>
 </Tabs>
 
-### Force Organizations
+### Force organizations
 
 If you would like to prohibit people from using their personal accounts and force them to be part of an organization, the `hidePersonal` property forces your user to join or create an organization in order to continue.
 ```tsx copy filename="organization-portal.tsx"
