--- a/docs/custom-flows/forgot-password.mdx
+++ b/docs/custom-flows/forgot-password.mdx
@@ -3,7 +3,7 @@ title: Forgot password
 description: Create a custom forgot password flow for your users.
 ---
 
-# Forgot Password
+# Forgot password
 
 Clerk's [prebuilt components](/docs/components/overview) have options that you can configure to help your users who have forgotten a password.
 
