--- a/docs/custom-flows/multi-session-applications.mdx
+++ b/docs/custom-flows/multi-session-applications.mdx
@@ -44,7 +44,7 @@ To enable the multi-session feature in your Clerk instance, go to the Clerk Dash
   alt="The Sessions page in the Clerk Dashboard. A red arrow points to the active Sessions tab. On this page, a red arrow points to the Multi-session handling toggle, which is toggled on. There is also a red arrow pointing to the 'Apply changes' button."
 />
 
-## Using Clerk Components
+## Using Clerk components
 
 The easiest way to add multi-session features to your application is by using the [`<UserButton />`][user-button-ref] component.
 
@@ -134,9 +134,9 @@ window.Clerk.setActive({ session: availableSessions[0].id });
 
 To add a new session, simply link to your existing sign-in flow. New sign-ins will automatically add to the list of available sessions on the client. To create a sign-in flow, please check one of the following popular guides:
 
-- [​Email and password​](/docs/custom-flows/email-password)
-- [​Passwordless authentication​](/docs/custom-flows/email-sms-otp)
-- [​Social login (OAuth)](/docs/authentication/social-connections/oauth)
+- [Email and password](/docs/custom-flows/email-password)
+- [Passwordless authentication](/docs/custom-flows/email-sms-otp)
+- [Social login (OAuth)](/docs/authentication/social-connections/oauth)
 
 For more information on how Clerk's sign-in flow works, check out the [detailed sign-in guide](/docs/custom-flows/overview#sign-in-flow).
 
