--- a/docs/custom-flows/oauth-connections.mdx
+++ b/docs/custom-flows/oauth-connections.mdx
@@ -1,9 +1,9 @@
 ---
-title: OAuth Connections
+title: OAuth connections
 description: Learn how to leverage the Clerk SDK to build completely custom OAuth flows.
 ---
 
-# OAuth Connections
+# OAuth connections
 
 In case one of our [standard OAuth integration methods](/docs/authentication/social-connections/oauth) doesn't cover your needs, you can leverage the Clerk SDK to build completely custom OAuth flows.
 
@@ -110,7 +110,7 @@ user
   });
 ```
 
-## OAuth for Native applications
+## OAuth for React Native applications
 
 With Clerk, you can add OAuth flows in your [React Native or Expo applications](/docs/quickstarts/expo).
 
