--- a/docs/custom-flows/saml-connections.mdx
+++ b/docs/custom-flows/saml-connections.mdx
@@ -1,9 +1,9 @@
 ---
-title: SAML Connections
+title: SAML connections
 description: Learn how to leverage the Clerk SDK to build a completely custom SAML flow.
 ---
 
-# SAML Connections
+# SAML connections
 
 In case our default [SAML flow](/docs/authentication/saml-at-clerk) doesn’t cover your needs, you can leverage the Clerk SDK to build a completely custom SAML flow.
 
@@ -77,10 +77,10 @@ function SignInSAMLButton() {
 
   const signInWith = (strategy: SamlStrategy) => {
     return signIn.authenticateWithRedirect({
-		  identifier: "email_goes_here",
-		  strategy: strategy,
-		  redirectUrl: "/sso-callback",
-		  redirectUrlComplete: "/",
+      identifier: "email_goes_here",
+      strategy: strategy,
+      redirectUrl: "/sso-callback",
+      redirectUrlComplete: "/",
     });
   };
 
