--- a/docs/custom-flows/sign-out.mdx
+++ b/docs/custom-flows/sign-out.mdx
@@ -16,7 +16,7 @@ You can either sign out users in Clerk by utilizing [Clerk Components](/docs/com
 - You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 - You need to install the correct SDK for your application. You can find steps on how to do so through Clerk's [quickstart](/docs/quickstarts/overview) guides.
 
-## Using Clerk Components
+## Using Clerk components
 
 The simplest way to sign out users is via the [`<UserButton />`][user-button] component. The [`<UserButton />`][user-button] is a pre-built UI component that gives a signed-in user a way to manage their account. One of the options is a **Sign out** button.
 
