--- a/docs/deployments/changing-domains.mdx
+++ b/docs/deployments/changing-domains.mdx
@@ -57,7 +57,7 @@ After changing your domain, a new **Publishable key** will be automatically gene
   Failing to update your **Publishable key** will result in Clerk failing to load. 
 </Callout>
 
-## Specify Subdomain
+## Specify subdomain
 
 If you would like to specify your subdomain of your application, go to the Clerk Dashboard and navigate to the **[Domains](https://dashboard.clerk.com/last-active?path=paths)** page. Select the **Danger** tab.
 
