--- a/docs/deployments/migrate-from-firebase.mdx
+++ b/docs/deployments/migrate-from-firebase.mdx
@@ -3,14 +3,6 @@ title: Migrate from Firebase
 description: Migrating your user base from Firebase to Clerk is a 2-part process that can be accomplished with just a few steps.
 ---
 
-import {Steps} from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { YouTube } from "@/components/Youtube";
-import { Images } from "@/components/Images";
-import {Cards} from "@/components/Cards";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
-
 # Migrate from Firebase
 
 Migrating your user base from Firebase to Clerk is a 2-part process that can be accomplished with just a few steps.
@@ -71,9 +63,9 @@ On the new window that opens, you'll find the following values: `base64_signer_k
 
 You can find more information about this page and the values above on [Firebase's documentation](https://firebaseopensource.com/projects/firebase/scrypt/).
 
-### Create a Node script
+### Create a Node.js script
 
-Now you have all the information you need to import your Firebase users into Clerk. This example uses node, but you can use any other language or method if you so wish.
+Now you have all the information you need to import your Firebase users into Clerk. This example uses Node.js, but you can use any other language or method if you so wish.
 
 #### init npm
 
