--- a/docs/deployments/overview.mdx
+++ b/docs/deployments/overview.mdx
@@ -35,9 +35,9 @@ A common mistake when deploying to production is forgetting to change your API k
 
 2. **Secret Key:** Formatted as `sk_test_` in development and `sk_live_` in production. These values are used to access Clerk's Backend API.
 
-3. **OAuth credentials:** In development, Clerk provides you with a set of shared OAuth credentials. These are not secure in production and you will need to provide your own.​
+3. **OAuth credentials:** In development, Clerk provides you with a set of shared OAuth credentials. These are not secure in production and you will need to provide your own.
 
-## DNS Records
+## DNS records
 
 Clerk uses DNS records to provide session management, and emails verified from your domain. You will need to go to DNS section to see the records that you need to set.
 
@@ -50,7 +50,8 @@ Clerk uses DNS records to provide session management, and emails verified from y
   alt="Production DNS Records"
 />
 
-## Deploy Certificates
+## Deploy certificates
+
 Once you've completed all the above steps, you're ready to go to the home page, and press Deploy to set SSL certificates and finalize the instance deployment.
 
 <Images
