--- a/docs/integrations/analytics/google-analytics.mdx
+++ b/docs/integrations/analytics/google-analytics.mdx
@@ -70,13 +70,13 @@ To send events to Google Analytics servers, Clerk uses the [Measurement Protocol
   alt="A gif showing how to access the measurement ID in the Google Analytics UI."
 />
 
-### Include Clerk User ID
+### Include Clerk user ID
 
 Since Clerk is used for the user management and authentication in your application, we provide the capability to associate the user identifier (UID) generated from Clerk with the User ID feature in Google Analytics. Enabling this feature will allow enhanced user analysis capablities on Google Analytics like cross-device user tracking, session unification and more.Read more about the User ID feature:
 
 [Google Analytics 4 User-ID](https://support.google.com/analytics/answer/9213390)
 
-[​Universal Analytics User-ID](https://support.google.com/analytics/answer/3123662?hl=en​)
+[Universal Analytics User-ID](https://support.google.com/analytics/answer/3123662?hl=en)
 
 ### Events to track
 
@@ -100,11 +100,11 @@ Sent every time a user signs in to his account through Clerk.
 For **Universal Analytics** properties, this is sent as a custom event.
   - Category: `Clerk`
   - Action: `login`
-  - Label: `{{login method}}`​
+  - Label: `{{login method}}`
 
 For **Google Analytics 4** properties, this matches the standard [login event](https://developers.google.com/analytics/devguides/collection/ga4/reference/events#login).
 
-## Frequently Asked Questions
+## Frequently asked questions (FAQ)
 
 **Will Clerk events disrupt session attribution, user count or other metrics?**
 
