--- a/docs/integrations/databases/fauna.mdx
+++ b/docs/integrations/databases/fauna.mdx
@@ -59,7 +59,7 @@ The completed provider form should resemble the following:
 
 Before clicking the **Save** button, copy the **Audience URL** and then go ahead and save.
 
-## JWT Template
+## Create a new Fauna JWT template
 
 In the Clerk Dashboard, navigate to the **[JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates)** page. Click on the **New template** button to create a new template based on Fauna.
 
@@ -130,8 +130,8 @@ const Example = () => {
   The `getToken({ template: <your-template-name> })` call is asynchronous and returns a Promise that needs to be resolved before accessing the token value. This token is short-lived for better security and should be called before every request to your Fauna database. The caching and refreshing of the token are handled automatically by Clerk.
 </Callout>
 
-## Next Steps
+## Next steps
 
-- Replace the [Fauna JavaScript driver](https://docs.fauna.com/fauna/current/drivers/) with a GraphQL client like [Apollo](https://github.com/apollographql/apollo-client) or [graphql-request​](https://github.com/jasonkuhrt/graphql-request).
+- Replace the [Fauna JavaScript driver](https://docs.fauna.com/fauna/current/drivers/) with a GraphQL client like [Apollo](https://github.com/apollographql/apollo-client) or [graphql-request](https://github.com/jasonkuhrt/graphql-request).
 - Try adding some [custom claims](/docs/backend-requests/making/jwt-templates) to the JWT token.
 
