--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -101,7 +101,7 @@ await getToken({ template: "integration_firebase" });
 
 The above method will return the token needed for the Firebase Web SDK to sign in your users with Clerk.
 
-### Sign-in using the Firebase Web SDK
+### Sign in using the Firebase Web SDK
 
 <Callout type="info">
   The Firebase Web SDK referenced is the browser installation of the official Firebase JavaScript SDK package on [npm](https://www.npmjs.com/package/firebase).
