--- a/docs/integrations/databases/hasura.mdx
+++ b/docs/integrations/databases/hasura.mdx
@@ -76,7 +76,7 @@ HASURA_GRAPHQL_JWT_SECRET: '{"jwk_url":"https://{{fapi}}/.well-known/jwks.json"}
 
 Replace `<YOUR_FRONTEND_API>` with the Frontend API value. This value can be found in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page.
 
-### With Custom Signing Key
+### With custom signing key
 
 If you did use a custom signing key, instead of providing the `jwk_url` you need to provide the algorithm type and key in the stringified JSON object as the `HASURA_GRAPHQL_JWT_SECRET` in the Hasura Cloud Env Vars or in the `docker-compose.yml` file.
 
