--- a/docs/integrations/databases/nhost.mdx
+++ b/docs/integrations/databases/nhost.mdx
@@ -58,7 +58,7 @@ From your Nhost dashboard, navigate to **Settings** --> **Environment variables*
 
 Next to the **NOHST_JWT_SECRET**, click the **Edit** button and paste in the **JWKS URL** that you copied from the Clerk Dashboard.
 
-### With Custom Signing Key
+### With custom signing key
 
 If you used a custom signing key, instead of providing the `jwk_url`, you need to provide the algorithm `type` and `key` as a JSON object in the `NHOST_JWT_SECRET` field.
 
