--- a/docs/organizations/inviting-users.mdx
+++ b/docs/organizations/inviting-users.mdx
@@ -100,7 +100,7 @@ export default function InvitationList() {
 }
 ```
 
-### Custom redirect url
+### Custom redirect URL
 
 When creating an organization invitation and using Clerk's Next.js, Remix, or Backend SDKs, you can specify a custom redirect URL. After users click on organization invitation link and the ticket is verified, they will get redirected to that URL. The URL will contain two important query parameters added by Clerk: `__clerk_ticket` and `__clerk_status`.
 
