--- a/docs/organizations/metadata.mdx
+++ b/docs/organizations/metadata.mdx
@@ -1,9 +1,9 @@
 ---
-title: Organization Metadata
+title: Organization metadata
 description: Organization objects hold a set of metadata that can be used internally to store arbitrary information.
 ---
 
-# Organization Metadata
+# Organization metadata
 
 Metadata allows for custom data to be saved on the `Organization` and `Organization Membership` objects. There are two types of metadata: **public** and **private**. Choosing which metadata field you should use for setting custom attributes on your organizations becomes a matter of access and visibility.
 
