--- a/docs/references/javascript/clerk/create-organization.mdx
+++ b/docs/references/javascript/clerk/create-organization.mdx
@@ -1,9 +1,9 @@
 ---
-title: <CreateOrganization /> Component
+title: <CreateOrganization /> component
 description: The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application.
 ---
 
-# `<CreateOrganization />` Component
+# `<CreateOrganization />` component
 
 <Images alt="Create Organization Example" width={992} height={568} src="/docs/images/ui-components/component-org_create.svg" />
 
