--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -1,9 +1,9 @@
 ---
-title: Organization Methods
+title: Organization methods
 description: These are all methods on the Clerk class that allow you to create, modify, or read information about Organizations.
 ---
 
-# Organization Methods
+# Organization methods
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that allow you to create, modify, or read information about [Organizations](/docs/references/javascript/organization/organization).
 
