--- a/docs/references/javascript/clerk/redirect-methods.mdx
+++ b/docs/references/javascript/clerk/redirect-methods.mdx
@@ -1,9 +1,9 @@
 ---
-title: Redirect Methods
+title: Redirect methods
 description: These are all methods on the Clerk class that help you manage route navigation based on the Clerk dashboard configuration.
 ---
 
-# Redirect Methods
+# Redirect methods
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage route navigation based on the Clerk dashboard configuration.
 
