--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -1,9 +1,9 @@
 ---
-title: Session Methods
+title: Session methods
 description: These are all methods on the Clerk class that help you manage the active session and/or organization.
 ---
 
-# Session Methods
+# Session methods
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage the active session and/or organization.
 
