--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -1,9 +1,9 @@
 ---
-title: <SignIn /> Component
+title: <SignIn /> component
 description: The <SignIn /> component renders a UI for signing in users. The functionality of the <SignIn /> component are controlled by the instance settings you specify in your Clerk Dashboard. You can further customize your <SignIn /> component by passing additional properties at the time of rendering.
 ---
 
-# `<SignIn />` Component
+# `<SignIn />` component
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-sign_in.svg" alt="Sign in component example" />
 
