--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -1,9 +1,9 @@
 ---
-title: <SignUp /> Component
+title: <SignUp /> component
 description: The <SignUp /> component renders a UI for signing up users. The functionality of the <SignUp /> component are controlled by the instance settings you specify in your Clerk Dashboard. You can further customize your SignUp component by passing additional properties at the time of rendering.
 ---
 
-# `<SignUp />` Component
+# `<SignUp />` component
 
 <Images width={496} height={780} src="/docs/images/ui-components/component-sign_up.svg" alt="Sign up component example" />
 
