--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -1,9 +1,9 @@
 ---
-title: <UserProfile /> Component
+title: <UserProfile /> component
 description: The <UserProfile /> component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
 ---
 
-# `<UserProfile />` Component
+# `<UserProfile />` component
 
 <Images width={976} height={762} src="/docs/images/ui-components/component-user_profile.svg" alt="User Profile example" />
 
@@ -236,7 +236,7 @@ Closes the user profile overlay.
 function closeUserProfile(): void;
 ```
 
-## Custom Pages
+## Custom pages
 
 You can add customized pages for the [`<UserProfile />`][userprofile-ref] component by using the `customPages` prop.
 
