--- a/docs/references/javascript/sign-in/second-factor.mdx
+++ b/docs/references/javascript/sign-in/second-factor.mdx
@@ -1,9 +1,9 @@
 ---
-title: Second Factor
+title: Second factor
 description: These are all methods on the SignIn class that allow you to handle the second factor of a multi-factor authentication flow.
 ---
 
-# Second Factor
+# Second factor
 
 These are all methods on the [`SignIn`][signin-ref] class that allow you to handle the second factor of a multi-factor authentication flow.
 
