--- a/docs/references/javascript/types/custom-page.mdx
+++ b/docs/references/javascript/types/custom-page.mdx
@@ -5,7 +5,7 @@ description: An interface that provides the ability to add custom pages to the <
 
 # `CustomPage`
 
-An interface that provides the ability to add custom pages to the [`<UserProfile />`][userprofile-ref] or [orgprofile-ref] components.
+An interface that provides the ability to add custom pages to the [`<UserProfile />`][userprofile-ref] or [`<OrganizationProfile />`][orgprofile-ref] components.
 
 ## Attributes
 
