--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -3,7 +3,7 @@ title: Create User Metadata
 description: These are the methods that help you create data for the user, such as createEmailAddress() and createPhoneNumber().
 ---
 
-# Create User Metadata
+# Create user metadata
 
 ## `createEmailAddress()`
 
