--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -29,7 +29,7 @@ Because Clerk Next.js is a wrapper around Clerk React, you can utilize the hooks
 - [`useOrganization()`](/docs/references/react/use-organization)
 - [`useOrganizationList()`](/docs/references/react/use-organization-list)
 
-## App Router References
+## App router references
 
 Clerk provides first-class support for the [Next.js App Router](https://nextjs.org/docs/app). The below methods and references show how to integrate Clerk features into applications that take advantage of the latest App Router and React Server Components features.
 
@@ -38,14 +38,14 @@ Clerk provides first-class support for the [Next.js App Router](https://nextjs.o
 - [Route Handlers](/docs/references/nextjs/route-handlers)
 - [Server Actions](/docs/references/nextjs/server-actions)
 
-## Pages Router References
+## Pages router references
 
 Clerk continues to provide drop-in support for the Next.js Pages Router. In addition to the main Clerk integration, several methods are available for instrumenting authentication within Pages Router-based applications.
 
 - [`getAuth()`](/docs/references/nextjs/get-auth)
 - [`buildClerkProps()`](/docs/references/nextjs/build-clerk-props)
 
-## Other References
+## Other references
 
 ### Authentication object
 
