--- a/docs/references/nextjs/route-handlers.mdx
+++ b/docs/references/nextjs/route-handlers.mdx
@@ -1,12 +1,12 @@
 ---
-title: Route handlers
+title: Route Handlers
 description: Learn how to use Clerk with your Route Handlers.
 ---
 # Route Handlers
 
 Clerk provides helpers to allow you to protect your Route Handlers, fetch the current user, and interact with the Clerk API.
 
-## Protecting route handlers
+## Protecting Route Handlers
 
 If you aren't protecting your Route Handler using Clerk's middleware, you can check if the user is logged in.
 
