--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -176,7 +176,7 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 | `setSession()` (deprecated) | Deprecated in favor of `setActive()`. |
 | `signIn` | An object that contains the current sign-in attempt status and methods to create a new sign-in attempt. |
 
-### Result Status
+### Result status
 
 | Values | Descriptiom |
 | --- | --- |
