--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -181,7 +181,7 @@ The `useSignUp()` hook gives you access to the [`SignUp`](/docs/references/javas
 | `setSession()` (deprecated) | Deprecated in favor of `setActive()`. |
 | `signUp` | An object that contains the current sign-up attempt status and methods to create a new sign-up attempt. |
 
-### Result Status
+### Result status
 
 | Values | Descriptiom |
 | --- | --- |
