--- a/docs/references/ruby/available-methods.mdx
+++ b/docs/references/ruby/available-methods.mdx
@@ -100,7 +100,7 @@ Verify whether a session with a given ID corresponds to the provided session tok
 sdk.sessions.verify_token("sess_xyz", "jwt")
 ```
 
-## SMS Messages (deprecated)
+## SMS messages (deprecated)
 
 <Callout type="danger">
   This resource is deprecated. Clerk no longer supports sending SMS messages through Clerk's backend API.
