--- a/docs/security/fixation-protection.mdx
+++ b/docs/security/fixation-protection.mdx
@@ -5,9 +5,9 @@ description: Session Fixation is an attack that permits an attacker to hijack a 
 
 # Fixation protection
 
-Session Fixation is an attack that permits an attacker to hijack a valid user session. The attack explores a limitation in the way the web application manages the session ID, more specifically the vulnerable web application. When authenticating a user, it doesn’t assign a new session ID, making it possible to use an existent session ID.
+Session Fixation is an attack that permits an attacker to hijack a valid user session. The attack explores a limitation in the way the web application manages the session ID, more specifically the vulnerable web application. When authenticating a user, it doesn't assign a new session ID, making it possible to use an existent session ID.
 
-​[The OWASP® Foundation, Cross Site Request Forgery (CSRF)​](https://owasp.org/www-community/attacks/Session_fixation)
+[The OWASP® Foundation, Cross Site Request Forgery (CSRF)](https://owasp.org/www-community/attacks/Session_fixation)
 
 Session fixation is a technique for hijacking a user session.
 
