--- a/docs/security/xss-leak-protection.mdx
+++ b/docs/security/xss-leak-protection.mdx
@@ -5,7 +5,7 @@ description: Learn how Clerk prevents and mitigates XSS attacks.
 
 # XSS leak protection
 
-Cross-Site Scripting (XSS) attacks are a type of injection, in which malicious scripts are injected into otherwise benign and trusted websites.​The [OWASP® Foundation, Cross Site Scripting (XSS)​](https://owasp.org/www-community/attacks/xss/)
+Cross-Site Scripting (XSS) attacks are a type of injection, in which malicious scripts are injected into otherwise benign and trusted websites. The [OWASP® Foundation, Cross Site Scripting (XSS)](https://owasp.org/www-community/attacks/xss/)
 
 XSS vulnerabilities are incredibly serious and we recommend you reference the [OWASP Cheat Sheet](https://cheatsheetseries.owasp.org/cheatsheets/Cross_Site_Scripting_Prevention_Cheat_Sheet.html) to learn how you can prevent an attack.
 
@@ -32,9 +32,9 @@ HttpOnly cookies prevent session tokens from leaking through XSS attacks. Unless
 Other forms of session token storage are susceptible to this issue, so even if you don't use Clerk, we highly recommend avoiding these forms of storage for session tokens:
 
 * Cookies without the `HttpOnly` flag
-* [Window.localStorage​](https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage)
-* [Window.sessionStorage​](https://developer.mozilla.org/en-US/docs/Web/API/Window/sessionStorage)
-* ​[IndexedDB​](https://developer.mozilla.org/en-US/docs/Web/API/IndexedDB_API)
+* [Window.localStorage](https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage)
+* [Window.sessionStorage](https://developer.mozilla.org/en-US/docs/Web/API/Window/sessionStorage)
+* [IndexedDB](https://developer.mozilla.org/en-US/docs/Web/API/IndexedDB_API)
 
 ## Why is the `__session` cookie on my application domain not HttpOnly?
 The `__session` cookie contains the session token and it is dropped by Clerk to your application's root domain (e.g. `example.com`). It is not HttpOnly (as is the case with the `__client` cookie which lives on the Frontend API domain, e.g. `clerk.example.com`) because it needs to be accessible by Clerk.js.
