--- a/docs/testing/overview.mdx
+++ b/docs/testing/overview.mdx
@@ -15,7 +15,7 @@ Testing is an important part of every application. Clerk has built some helpers 
 
 To avoid sending an email or SMS message with a one time passcode (OTP) during testing, you can use a faux email address or phone number that has a fixed code. Read the complete documentation [here](https://clerk.com/docs/testing/test-emails-and-phones).
 
-## Testing Frameworks
+## Testing frameworks
 
 We've written some tutorials using popular JS testing frameworks. More coming soon.
 
