--- a/docs/troubleshooting/script-loading.mdx
+++ b/docs/troubleshooting/script-loading.mdx
@@ -1,9 +1,9 @@
 ---
-title: Script Loading
+title: Script loading
 description: Troubleshooting strategies for cases when Clerk doesn't successfully load
 ---
 
-# Script Loading
+# Script loading
 
 It sometimes might happen that Clerk doesn't successfully load and initialize during page rendering. This could happen for a myriad of reasons, including but not limited to:
 
