--- a/docs/upgrade-guides/url-based-session-syncing.mdx
+++ b/docs/upgrade-guides/url-based-session-syncing.mdx
@@ -13,7 +13,7 @@ URL-based session syncing (previously known as Cookieless Development mode) is a
   This mode only applies to development instances. Production instances remain unaffected and continue communicating with Frontend API using first-party, HttpOnly cookies.
 </Callout>
 
-## Migrating to URL-based Session Syncing
+## Migrating to URL-based session syncing
 
 To opt-in to URL-based session syncing, perform the following steps:
 
