--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -1,9 +1,9 @@
 ---
-title: Adding Satellite Domains
+title: Adding satellite domains
 description: Learn how to share sessions across different domains by adding satellite domains to your application.
 ---
 
-# Adding Satellite Domains
+# Adding satellite domains
 
 Clerk supports sharing sessions across different domains by adding one or many satellite domains to an application.
 
@@ -14,7 +14,7 @@ Users must complete the sign-in flow on the primary domain, either using Clerkâ€
 To access authentication state from a satellite domain, users will be transparently redirected to the primary domain. If users need to sign in, they must be redirected to a sign in flow hosted on the primary domain, then redirected back to the originating satellite domain.
 
 
-## How to add Satellite Domains
+## How to add satellite domains
 
 <Steps>
 
