--- a/docs/components/customization/overview.mdx
+++ b/docs/components/customization/overview.mdx
@@ -9,7 +9,7 @@ The appearance prop can be applied to [React's `<ClerkProvider />`](/docs/compon
 
 This applies to all of the React-based packages, like [Next.js](/docs/quickstarts/nextjs) and [Gatsby](/docs/quickstarts/gatsby), as well as [the pure JavaScript ClerkJS package](/docs/references/javascript/overview).
 
-## Using a pre-built Theme
+## Using a pre-built theme
 
 Clerk offers [a set of themes that can be used with the `appearance` prop](/docs/components/customization/themes). The themes are available as a package called `@clerk/themes`.
 
