--- a/docs/deployments/migrate-overview.mdx
+++ b/docs/deployments/migrate-overview.mdx
@@ -1,9 +1,9 @@
 ---
-title: Migrate to Clerk from Another Platform
+title: Migrate to Clerk from another platform
 description: Guides on how to move your user data from another authentication platform to Clerk.
 ---
 
-# Migrate to Clerk from Another Platform
+# Migrate to Clerk from another platform
 
 There are typically two main strategies for migrating your existing user management from a different platform into Clerk:
 - [Basic Export / Import](#basic-export-import)
@@ -11,9 +11,9 @@ There are typically two main strategies for migrating your existing user managem
 
 Each of these have trade-offs you'll need to consider on behalf of for your application and its users.
 
-## Basic Export / Import
+## Basic export / import
 
-With Basic Export / Import, you are taking an export from your previous tool and importing data into Clerk. The most common way to handle this is by making use of the [Backend API](/docs/reference/backend-api/tag/Users#operation/CreateUser) and its `CreateUser` API endpoint. It's important to note that the `CreateUser` endpoint is rate limited. Please review our [Rate Limits](https://clerk.com/docs/backend-requests/resources/rate-limits#backend-api-requests) page for details.
+With basic export / import, you are taking an export from your previous tool and importing data into Clerk. The most common way to handle this is by making use of the [Backend API](/docs/reference/backend-api/tag/Users#operation/CreateUser) and its `CreateUser` API endpoint. It's important to note that the `CreateUser` endpoint is rate limited. Please review our [Rate Limits](https://clerk.com/docs/backend-requests/resources/rate-limits#backend-api-requests) page for details.
 
 You'll also need to provide your `password_hasher` value (The hashing algorithm used to generate the password digest) and in some instances Clerk will transparently upgrade your users' password hashes to the more secure Bcrypt hashing algorithm. More details on this topic are available in the [Create a new user](/docs/reference/backend-api/tag/Users#operation/CreateUser!path=password_hasher&t=request) Backend API Reference docs. 
 
@@ -27,7 +27,7 @@ When evaluating the Basic Import / Export workflow there are a few tradeoffs you
 Consider that any export of your data will be a snapshot in time. This means that there is a potential of your data being out of sync at the time of import. To work around this you might script and coordinate the export and import actions to be as close in time as possible, or you might schedule some kind of downtime or maintenance window to complete this action. Be sure to consider Clerk API rate-limits when evaluating a potentially time-sensitive migration approach.
 
 
-#### Active sessions / Session management
+#### Active sessions / session management
 Another consideration is centered around how you handle session management. While most authentication providers don't provide session management out of the box, Clerk does. This means that when you switch over to using Clerk you'll be changing the system that handles your users' active sessions. This will likely end any currently active sessions initiated by your previous session management service (unless you are able to gracefully handle this somehow within your architecture).
 
 #### Foreign keys
@@ -58,12 +58,12 @@ As part of the trickle migration, you'll need to determine an appropriate length
 #### Dealing with the delta
 A trickle migration is great for upgrading active users and sessions to take advantage of Clerk but there will always be some users who won't create an active session within the migration window and therefore will need to be migrated by other means, typically via [Basic Import / Export](#basic-export-import). However, the benefit of a trickle migration is that the risk of coordination becomes much lower as the delta users are likely to be less active, are less in numbers, and therefore the risk of data de-synchronization is reduced. 
 
-## Migration Tools
+## Migration tools
 
 ### [clerk/migration-script](https://github.com/clerk/migration-script)
 To aid in basic migrations, Clerk provides an open-source script that takes a JSON file as input, containing a list of users, and creates a user in Clerk using Clerk's backend API. The script respects Clerk's [backend rate limits](https://clerk.com/docs/backend-requests/resources/rate-limits#backend-api-requests) and gracefully handles errors. We suggest you customize the [Zod schema](https://github.com/clerk/migration-script/blob/main/index.ts#L25-L43) to your application's needs.
 
-## Migration Guides
+## Migration guides
 Clerk is hard at work writing up more and more specific migration guides and tools. If you have are interested in specific guides please provide more feedback at https://feedback.clerk.com
 
 <div className="container mx-auto my-4">
