--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -202,7 +202,7 @@ function App() {
 export default ClerkApp(App);
 ```
 
-#### Custom Boundary
+#### Custom boundary
 
 If you need to add a custom boundary to your application, you can pass it as an argument to the `ClerkErrorBoundary`.
 
