--- a/docs/references/javascript/clerk/handle-navigation.mdx
+++ b/docs/references/javascript/clerk/handle-navigation.mdx
@@ -1,9 +1,9 @@
 ---
-title: Handle Navigation
+title: Handle navigation
 description: These are all methods on the Clerk class that help you handle navigation callbacks from Clerk, usually in conjunction with redirect methods or built urls.
 ---
 
-# Handle Navigation
+# Handle navigation
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you handle navigation callbacks from Clerk, usually in conjunction with [redirect methods](/docs/references/javascript/clerk/redirect-methods) or [built URLs](/docs/references/javascript/clerk/build-urls).
 
