--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -1,9 +1,9 @@
 ---
-title: <OrganizationProfile /> Component
+title: <OrganizationProfile /> component
 description: The <OrganizationProfile /> component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 ---
 
-# `<OrganizationProfile />` Component
+# `<OrganizationProfile />` component
 
 <Images alt="Organization Profile Example" width={1024} height={548} src="/docs/images/ui-components/component-org_profile.svg" />
 
@@ -236,7 +236,7 @@ Closes the organization profile overlay.
 function closeOrganizationProfile(): void;
 ```
 
-## Custom Pages
+## Custom pages
 
 You can add customized pages for the [`<OrganizationProfile />`][orgprofile-ref] component by using the `customPages` prop.
 
