--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -1,9 +1,9 @@
 ---
-title: <OrganizationSwitcher /> Component
+title: <OrganizationSwitcher /> component
 description: The <OrganizationSwitcher /> component is used to enable the ability to switch between available organizations the user may be part of in your application.
 ---
 
-# `<OrganizationSwitcher />` Component
+# `<OrganizationSwitcher />` component
 
 <Images alt="Organization Switcher Example" width={992} height={568} src="/docs/images/ui-components/component-org_switcher.svg" />
 
