--- a/docs/references/nextjs/authentication-object.mdx
+++ b/docs/references/nextjs/authentication-object.mdx
@@ -1,9 +1,9 @@
 ---
-title: Authentication Object
+title: Authentication object
 description: The Authentication object contains information about the current user's session.
 ---
 
-# `Authentication` Object
+# `Authentication` object
 
 Both [`auth()`](/docs/references/nextjs/auth) and  [`getAuth()`](/docs/references/nextjs/get-auth) return an `Authentication` object. This JavaScript object contains important information like session data, your user's ID, as well as their active organization ID.
 
