--- a/docs/upgrade-guides/api-keys.mdx
+++ b/docs/upgrade-guides/api-keys.mdx
@@ -1,12 +1,12 @@
 ---
-title: Publishable and Secret Keys
+title: Publishable and secret keys
 description: Dive into Clerk's latest V3 update.
 ---
 
-# Publishable and Secret Keys
+# Publishable and secret keys
 
 <Callout type="info">
-  If your application was created after January 18, 2023, you're already using Publishable and Secret Keys.
+  If your application was created after January 18, 2023, you're already using publishable and secret keys.
 </Callout>
 
 In early Clerk SDKs, developers were required to configure three keys:
@@ -24,6 +24,8 @@ The name and format of these keys are common among developer tools, and we adopt
 
 Although legacy keys will remain operational, we have updated our documentation and code samples to use the new Publishable Key and Secret Key format.
 
-**Important: Legacy keys cannot be mixed with the new publishable and secret keys. It is important that you replace all keys at once.**
+<Callout type="danger">
+  Legacy keys cannot be mixed with the new publishable and secret keys. It is important that you replace all keys at once.
+</Callout>
 
 We recommend updating at your earliest convenience.
